Completed ReverseAndNot challenge

--- a/ChallengesUI/ReverseAndNotView.resx
+++ b/ChallengesUI/ReverseAndNotView.resx
@@ -117,4 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DescriptionTexBox.Text" xml:space="preserve">
+    <value>Write a function that takes an integer 'int' and returns a string with the integer backwards followed by the original integer. Examples:
+123 ➞ "321123"
+152 ➞ "251152"
+123456789 ➞ "987654321123456789"
+NOTE: 'int' is a non-negative integer.</value>
+  </data>
 </root>
