--- a/ChallengesUI/AnagramView.resx
+++ b/ChallengesUI/AnagramView.resx
@@ -117,4 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DescriptionTexBox.Text" xml:space="preserve">
+    <value>Create a function that takes two strings and determines if an anagram of the first string is in the second string. 
+Anagrams of "bag" are "bag", "bga", "abg", "agb", "gab", "gba". Since none of those anagrams are in "grab", the answer is false. 
+A "g", "a", and "b" are in the string "grab", but they're split up by the "r". Examples:
+"car", "race" ➞ true
+"nod", "done" ➞ true
+"bag", "grab" ➞ false</value>
+  </data>
 </root>
